# fuzzy-disco

./: .dockerignore  Dockerfile  README.md  docker-compose-from-source.yaml  docker-compose.yaml
disco-core/: .gitignore  Cargo.toml  README.md  Rocket.toml
disco-core/.github/workflows/: Docker-build.yaml  Test.yaml
disco-core/src/: control.rs  init.rs  main.rs
disco-core/src/api/: data.rs  get.rs  id.rs  mod.rs  post.rs  posts_payload.rs  result.rs  user.rs  user_payload.rs
disco-core/src/api/media/: data.rs  get.rs  mod.rs  post.rs  put.rs
disco-core/src/api/posts/: data.rs  delete.rs  get.rs  mod.rs  patch.rs  post.rs
disco-core/src/api/search/: data.rs  get.rs  mod.rs
disco-core/src/api/sesions/: data.rs  get.rs  mod.rs  post.rs
disco-core/src/api/sessions/: data.rs  get.rs  mod.rs  post.rs
disco-core/src/api/users/: data.rs  delete.rs  get.rs  mod.rs  post.rs  put.rs
disco-core/src/api/users/auth/: claims.rs  data.rs  mod.rs  post.rs  result.rs  token.rs
disco-core/src/api/users/auth/token/: claims.rs  mod.rs  response.rs
disco-core/src/api/users/posts/: data.rs  get.rs  mod.rs
disco-core/src/auth/: auth_payload.rs  data.rs  mod.rs  new_user.rs  post.rs  result.rs  token.rs
disco-core/src/mongo/: mod.rs  sesion.rs  session.rs  traits.rs  visibility.rs
disco-core/src/mongo/media/: class.rs  format.rs  media.rs  mod.rs  result.rs  status.rs
disco-core/src/mongo/post/: caption.rs  media.rs  mod.rs  post.rs  result.rs  title.rs
disco-core/src/mongo/user/: alias.rs  email.rs  mod.rs  password.rs  result.rs  sesion.rs  user.rs
disco-core/src/post/: caption.rs  mod.rs  post.rs  result.rs  title.rs
disco-core/src/server/: mod.rs
disco-core/src/server/api/: post.rs
disco-core/src/user/: alias.rs  mod.rs  password.rs  result.rs  user.rs
disco-core/tests/: load_database.py  media.py  payloads.py  post.py  search.py  sesions.py  sessions.py  test.py  users.py
disco-vue/: .gitignore  README.md  package-lock.json  package.json  vue.config.js
redis/: Dockerfile  (+1 more)
(+37 files in other folders)
