[package]
name = "disco-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.0.0-beta.3"
regex = "1.5.4"
lazy_static = "1.4.0"
validator = { version = "0.12", features = ["derive"] }
bcrypt = "0.10"
jsonwebtoken = "7"
chrono = { version = "0.4.19", features = ["serde"] }
