[package]
name = "disco-core"
version = "0.1.0"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
bcrypt = "0.10"
jsonwebtoken = "7.2.0"
rand = "0"
thiserror = "1.0"
infer = "0.5.0"

[dependencies.mongodb]
version = "2.0.0"
features = ["bson-chrono-0_4"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.validator]
version = "0.14.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.redis]
version = "0.21.1"
features = ["tokio-comp", "r2d2", "connection-manager"]
